--- a/docs/prepdata.1
+++ b/docs/prepdata.1
@@ -11,7 +11,7 @@
 .\" it edited by clig, remove the respective pair of cligPart-lines.
 .\"
 .\" cligPart TITLE
-.TH "prepdata" 1 "17Mar15" "Clig-manuals" "Programmer's Manual"
+.TH "prepdata" 1 "18Jun15" "Clig-manuals" "Programmer's Manual"
 .\" cligPart TITLE end
 
 .\" cligPart NAME
@@ -22,13 +22,13 @@ prepdata \- Prepares a raw data file for pulsar searching or folding (conversion
 .\" cligPart SYNOPSIS
 .SH SYNOPSIS
 .B prepdata
-[-ncpus ncpus]
 -o outfile
 [-pkmb]
 [-gmrt]
 [-bcpm]
 [-spigot]
 [-filterbank]
+[-lofarhdf5]
 [-psrfits]
 [-noweights]
 [-noscales]
@@ -45,6 +45,7 @@ prepdata \- Prepares a raw data file for pulsar searching or folding (conversion
 [-downsamp downsamp]
 [-nobary]
 [-shorts]
+[-DE405]
 [-dm dm]
 [-mask maskfile]
 infile ...
@@ -52,12 +53,6 @@ infile ...
 
 .\" cligPart OPTIONS
 .SH OPTIONS
-.IP -ncpus
-Number of processors to use with OpenMP,
-.br
-1 Int value between 1 and oo.
-.br
-Default: `1'
 .IP -o
 Root of the output file names,
 .br
@@ -72,6 +67,8 @@ Raw data in Berkeley-Caltech Pulsar Machine (BPP) format.
 Raw data in Caltech-NRAO Spigot Card format.
 .IP -filterbank
 Raw data in SIGPROC filterbank format.
+.IP -lofarhdf5
+Raw data in LOFARHDF5 format.
 .IP -psrfits
 Raw data in PSRFITS format.
 .IP -noweights
@@ -109,17 +106,19 @@ Subtract the mean of all channels from each sample (i.e. remove zero DM).
 .IP -numout
 Output this many values.  If there are not enough values in the original data file, will pad the output file with the average value,
 .br
-1 Long value between 1 and oo.
+1 Int value between 1 and oo.
 .IP -downsamp
 The number of neighboring bins to co-add,
 .br
-1 Int value between 1 and 128.
+1 Int value between 1 and 32.
 .br
 Default: `1'
 .IP -nobary
 Do not barycenter the data.
 .IP -shorts
 Use short ints for the output data instead of floats.
+.IP -DE405
+Use the DE405 ephemeris for barycentering instead of DE200 (the default).
 .IP -dm
 The dispersion measure to de-disperse (cm^-3 pc),
 .br
