--- a/clig/readfile.1
+++ b/clig/readfile.1
@@ -11,7 +11,7 @@
 .\" it edited by clig, remove the respective pair of cligPart-lines.
 .\"
 .\" cligPart TITLE
-.TH "readfile" 1 "12Mar10" "Clig-manuals" "Programmer's Manual"
+.TH "readfile" 1 "22Jun15" "Clig-manuals" "Programmer's Manual"
 .\" cligPart TITLE end
 
 .\" cligPart NAME
@@ -50,6 +50,7 @@ readfile \- Reads raw data from a binary file and displays it on stdout.
 [-wapp]
 [-spigot]
 [-filterbank]
+[-lofarhdf5]
 [-psrfits]
 [-fortran]
 [-index [index]]
@@ -115,6 +116,8 @@ Raw data in WAPP format.
 Raw data in Spigot Card format.
 .IP -filterbank
 Raw data in SIGPROC filterbank format.
+.IP -lofarhdf5
+Raw data in LOFARHDF5 format.
 .IP -psrfits
 Raw data in PSRFITS format.
 .IP -fortran
