--- a/docs/prepsubband.1
+++ b/docs/prepsubband.1
@@ -11,7 +11,7 @@
 .\" it edited by clig, remove the respective pair of cligPart-lines.
 .\"
 .\" cligPart TITLE
-.TH "prepsubband" 1 "08Apr14" "Clig-manuals" "Programmer's Manual"
+.TH "prepsubband" 1 "22Jun15" "Clig-manuals" "Programmer's Manual"
 .\" cligPart TITLE end
 
 .\" cligPart NAME
@@ -28,6 +28,7 @@ prepsubband \- Converts a raw radio data file into many de-dispersed time-series
 [-bcpm]
 [-spigot]
 [-filterbank]
+[-lofarhdf5]
 [-psrfits]
 [-noweights]
 [-noscales]
@@ -72,6 +73,8 @@ Raw data in Berkeley-Caltech Pulsar Machine (BPP) format.
 Raw data in Caltech-NRAO Spigot Card format.
 .IP -filterbank
 Raw data in SIGPROC filterbank format.
+.IP -lofarhdf5
+Raw data in LOFARHDF5 format.
 .IP -psrfits
 Raw data in PSRFITS format.
 .IP -noweights
@@ -145,7 +148,7 @@ Default: `10'
 .IP -nsub
 The number of sub-bands to use,
 .br
-1 Int value between 1 and 1024.
+1 Int value between 1 and 8192.
 .br
 Default: `32'
 .IP -downsamp
